tried to fix images issue
images aren't displaying on github pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
           <figure>
             <img
-              src="/images/pratham's_tweet.png"
+              src="images/pratham's_tweet.png"
               alt="List of semantic tags"
               style="width: 40em"
             />
@@ -73,7 +73,7 @@
             <p>A semantic element clearly describes its meaning to both the browser and the developer. Examples of non-semantic elements: &lt;div&gt; and &lt;span&gt; - Tells nothing about its content. Examples of semantic elements: &lt;form&gt;, &lt;table&gt;, and &lt;article&gt; - Clearly defines its content.</p>
             <figure>
             <img
-              src="/images/1_VU3WvCvNzu5KfLnrXi4BVA.jpeg"
+              src="images/1_VU3WvCvNzu5KfLnrXi4BVA.jpeg"
               alt="non-semantic vs semantic HTML structure"
               style="width: 40em"
             />
@@ -93,7 +93,7 @@
 <small>Read more  <a href="http://web-accessibility.carnegiemuseums.org/foundations/semantic/" target="_blank">here</a></small>
             <figure>
             <img
-              src="/images/mpjv5mkzc9bc2zsns3ex.png"
+              src="images/mpjv5mkzc9bc2zsns3ex.png"
               alt="HTML semantics for assisstive technology"
               style="width: 20em"
             />
@@ -108,7 +108,7 @@
 <p>To put it simply, pages with correctly implemented semantic HTML have an advantage in SEO over those that don&#39;t. </p>
             <figure>
             <img
-              src="/images/Capture-decran-2021-11-08-174902.png"
+              src="images/Capture-decran-2021-11-08-174902.png"
               alt="SEO & Semantic HTML"
               style="width: 20em"
             />
